--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "crypto-js": "^3.1.9-1",
     "hummus": "^1.0.108",
-    "memory-streams": "^0.1.3"
+    "memory-streams": "^0.1.3",
+    "minimist": "^1.2.0"
   }
 }
