--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
     "hummus": "^1.0.108",
     "memory-streams": "^0.1.3",
     "minimist": "^1.2.0"
+  },
+  "pkg": {
+    "scripts": [
+      "jsencrypt.js"
+    ]
   }
 }
