--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "crypto-js": "^3.1.9-1",
     "hummus": "^1.0.108",
     "memory-streams": "^0.1.3",
-    "minimist": "^1.2.0"
+    "minimist": "^1.2.0",
+    "moment": "^2.24.0"
   },
   "pkg": {
     "scripts": [
