--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "cheerio": "^1.0.0-rc.3",
     "crypto-js": "^3.1.9-1",
     "hummus": "^1.0.108",
+    "install": "^0.13.0",
     "memory-streams": "^0.1.3",
     "minimist": "^1.2.0",
-    "moment": "^2.24.0"
+    "moment": "^2.24.0",
+    "prompt": "^1.0.0"
   },
   "pkg": {
     "scripts": [
